--- a/core/static/core/episode.css
+++ b/core/static/core/episode.css
@@ -18,27 +18,17 @@ a {
     color: #FFFFFF;
 }
 .episodepage {
-    padding: 3% 12% 8% 12%;
+    width: 100%;
+    padding: 0em;
     background-color: #000;
 }
+.episodepage .section1 {
+    padding: 8em 2em 4em 2em;
+}
 .episodepage #back {
-    padding: 0% 0% 4% 0%;
     display: inline-flex;
     flex-direction: row;
     text-decoration: none;
-}
-.episodepage .btn {
-    cursor: pointer;
-    background-color: #000;
-    color: #FFFFFF;
-    border-radius: 8px;
-    border: 2px solid #FFFFFF;
-    z-index: 1;
-    font-size: 11px;
-    padding: 10px 24px;
-}
-.episodepage .btn:hover{
-    color: #FFFFFF;
 }
 .episodepage .row {  
     display: flex;
@@ -53,27 +43,6 @@ a {
 }
 .episodepage .epi-content {
     display: block;
-}
-
-@media screen and (max-width: 750px) {
-    .episodepage {
-        padding: 6% 2% 10% 2%;
-        background-color: #000;
-    }
-    .episodepage #back {
-        padding: 2% 0% 8% 0%;
-    }
-    .episodepage .row {   
-        flex-direction: column;
-    
-    }
-    .episodepage .side {
-        /* width: 100%; */
-        padding-bottom: 10%;
-    }
-    .episodepage .epi-content p {
-        font-size: 14px;
-    }
 }
 
 /* Podcast Episode Page Player */
@@ -118,7 +87,21 @@ a {
     margin: 0;
 }
 
-@media screen and (max-width: 750px) {
+@media screen and (max-width: 769px) {
+    .episodepage #back {
+        padding: 4em 0em 2em 0em;
+    }
+    .episodepage .row {   
+        flex-direction: column;
+    
+    }
+    .episodepage .side {
+        /* width: 100%; */
+        padding-bottom: 10%;
+    }
+    .episodepage .epi-content p {
+        font-size: 14px;
+    }
     .episodepage #timeline {
         width: 100%;
     }
