--- a/core/templates/core/blog.html
+++ b/core/templates/core/blog.html
@@ -19,7 +19,11 @@
 {% block body %}
 <!-- blog section -->
 <div class="blogpage">
-    <p class="pagetitle">A-Z LOGS</p>
+    
+    <div id="pagetitle">
+        <p style="color: #fff; font-size: xx-large; font-weight: bold; text-align: center; line-height: 0rem;">A-Z LOGS</p>
+        <p style="color: rgb(141, 141, 141); font-size: medium; font-weight: lighter; text-align: center; line-height: 0rem; margin-top: 0px;">A Leroy Buliro Blog</p>
+    </div>
     
     <div id="blogs">
         <!-- blog-post loop -->
