--- a/core/templates/core/core.html
+++ b/core/templates/core/core.html
@@ -36,7 +36,7 @@
             <div id="navsocial">
                 <a href="https://twitter.com/leroybuliro/" target="_blank"><img src="{% static 'core/icons/iconTT.png' %}" alt="twitter" width="20" height="20" ></a>
                 <a href="https://instagram.com/leroybuliro/" target="_blank"><img src="{% static 'core/icons/iconIG.png' %}" alt="instagram" width="20" height="20" ></a>
-            </div-->
+            </div>
         </nav>
 
         {% block body %}
