--- a/core/static/core/articlelayout.css
+++ b/core/static/core/articlelayout.css
@@ -99,15 +99,34 @@ a {
     /* font-family: 'Permanent Marker', cursive; */
     font-family: Permanent Marker;
     text-align: center;
-    font-size: 50px;
+    font-size: 30px;
     padding: 7rem 0rem;
     margin: 0;
 }
-.articlepage #back {
-    padding: 0% 2% 4% 2%;
+.articlepage .aboutsec {
+    background-color: #000;
+    padding: 2% 14% 3% 14%;
+    text-align: center;
+    border-top: 1px silver solid;
+    border-bottom: 1px silver solid;
+    /* display: grid;
+    grid-gap: 20px;
+    grid-template-rows: 1fr; */
     display: flex;
-    flex-direction: row;
-    text-decoration: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.articlepage .aboutsec p {
+    font-size: 14px;
+    line-height: 1.7rem;
+    color: #FFFFFF;
+    margin: 0;
+    padding: 0;
+}
+.articlepage .aboutsec a {
+    padding: 0.4em 0.4em;
 }
 
 @media screen and (max-width: 769px) {
@@ -146,6 +165,9 @@ a {
     }
     #entryend {
         font-size: 20px;
-        padding: 4rem 0rem;
+        padding: 2rem 0rem;
+    }
+    .articlepage .aboutsec {
+        padding: 4% 2% 2% 2%;
     }
 }
