--- a/core/static/core/episode.css
+++ b/core/static/core/episode.css
@@ -19,16 +19,18 @@ a {
 }
 .episodepage {
     width: 100%;
-    padding: 0em;
+    padding: 0% 20% 10% 20%;
     background-color: #000;
 }
 .episodepage .section1 {
-    padding: 8em 2em 4em 2em;
+    padding: 2em 0em 2em 0em;
 }
 .episodepage #back {
     display: inline-flex;
     flex-direction: row;
     text-decoration: none;
+    padding: 0em;
+    margin: 0em;
 }
 .episodepage .row {  
     display: flex;
@@ -88,8 +90,11 @@ a {
 }
 
 @media screen and (max-width: 769px) {
-    .episodepage #back {
-        padding: 4em 0em 2em 0em;
+    .episodepage {
+        padding: 0% 2% 10% 2%;
+    }
+    .episodepage .section1 {
+        padding: 2em 0em 1em 0em;
     }
     .episodepage .row {   
         flex-direction: column;
