--- a/core/static/core/homepage.css
+++ b/core/static/core/homepage.css
@@ -1,35 +1,48 @@
-.aboutsec {
+body {
     background-color: #000;
-    padding: 2% 14% 3% 14%;
-    text-align: center;
-    /* display: grid;
-    width: 100%;
-    grid-gap: 30px;
-    grid-template-columns: 1fr; */
-}
-
-.aboutsec p, a {
-    font-size: 14px;
-    line-height: 1.7rem;
-    color: #FFFFFF;
     margin: 0;
-    padding: 0;
 }
-
-.btn {
+@font-face {
     font-family: Josefin Sans;
+    src: url('/static/core/fonts/JosefinSans-VariableFont_wght.ttf') format('truetype');
+    font-weight: 400;
+}
+@font-face {
+    font-family: Indie;
+    src: url('/static/core/fonts/IndieFlower-Regular.ttf') format('truetype');
+    font-weight: 400;
+}
+@font-face {
+    font-family: Permanent Marker;
+    src: url('/static/core/fonts/PermanentMarker-Regular.ttf') format('truetype');
+    font-weight: 700;
+}
+#content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#links {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    grid-gap: 2px;
+}
+body a {
+    font-family: Indie;
+    font-size: 17px;
+    line-height: 1.7rem;
+    text-decoration: none;
+    color: #ffd900;
     cursor: pointer;
-    background-color: #000;
-    color: #FFFFFF;
-    border-radius: 8px;
-    border: 2px solid #FFFFFF;
-    z-index: 1;
-    font-size: 11px;
-    padding: 10px 24px;
+}
+body a:hover {
+    text-decoration: none;
 }
 
 @media only screen and (max-width: 750px) {
-    .aboutsec {
-        padding: 0% 2% 8% 2%;
+    body {
+        padding: 3% 2% 8% 2%;
     }
 }
