--- a/core/templates/core/homepage.html
+++ b/core/templates/core/homepage.html
@@ -1,38 +1,41 @@
-﻿{% extends "core\core.html" %}
-{% load static %}
+﻿{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+    <head>
 
-{% block title %}
-<title>Home | Leroy Buliro</title>
-{% endblock title %}
+        <title>Home | Leroy Buliro</title>
+        
+        <link rel="icon" type="image/png" href="{% static 'core/icons/lb.jpg' %}">
 
-{% block style %}
-<link rel="stylesheet" href="{% static 'core/homepage.css' %}">
-{% endblock style %}
+        <!-- Load css file -->
+        <link rel="stylesheet" href="{% static 'core/homepage.css' %}">
+        
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-{% block navmenu %}
-<a href="{% url 'core:blogpage' %}">BLOG</a>
-<a href="{% url 'core:podcast' %}">PODCAST</a>
-{% endblock navmenu %}
+        <!-- Load js file -->
+        <script>
+            document.addEventListener('DOMContentLoaded', function(){
 
-{% block body %}
+                document.querySelector('body').addEventListener('load', ()=> {
+                    let height = screen.availHeight
+                    let width = screen.availWidth
+                    document.querySelector('#content').style.height = height;
+                    document.querySelector('#content').style.width = width;
+                });
 
-<div class="aboutsec">
-    <section>
-        <img src="{% static 'core/icons/about.jpg' %}" alt="leroy" style="border-radius: 50%; max-width: 10em; padding: 2em;">
-        <p>Hi there. They call me Leroy, Mr. Buliro, but I also go by LERB. I am a full time financial advisor, part-time deejay, and occasional...well, you guessed it, storytelling enthusiast. Welcome to my personal website, a place for me to log snapshots of my life over the years, share stories as told by others, and periodically post technical content that may interest a couple other people.</p>
-        <div style="display:grid; grid-gap: 12px; grid-template-rows: 1fr; padding-top: 2rem;">
-            <a href="{% url 'core:blogpage' %}" >
-                <button class="btn">BLOG</button>
-            </a>
-            <a href="{% url 'core:podcast' %}" >
-                <button class="btn">PODCAST</button>
-            </a>
-            <a href="https://calendly.com/lerbfinancial/consultation/" >
-                <button class="btn">BOOK A FINANCIAL CONSULTATION</button>
-            </a>
-        </div>
-    </section>
+            });
+        </script>
+    </head>
 
-</div>
-
-{% endblock body %}
+    <body>
+        <section id="content">
+            <div id="links">
+                <a href="{% url 'core:blogpage' %}" >BLOG</a>
+                <a href="{% url 'core:podcast' %}" >PODCAST</a>
+                <a href="https://calendly.com/lerbfinancial/consultation/" >BOOK A FINANCIAL CONSULTATION</a>
+            </div>
+        </section>
+    </body>
+</html>
