--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -11,7 +11,7 @@
         <link rel="icon" type="image/png" href="{% static 'core/icons/lb.jpg' %}">
 
         <!-- Load css file -->
-        <link rel="stylesheet" href="{% static 'core/core.css' %}">
+        <link rel="stylesheet" href="{% static 'core/base.css' %}">
         {% block style %}
         {% endblock style %}
         
