--- a/core/static/core/base.css
+++ b/core/static/core/base.css
@@ -1,13 +1,13 @@
 * {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
 }
-
-body {
-    margin: 0;
+html {
+    background-color: #000;
 }
-
 @font-face {
     font-family: Josefin Sans;
     src: url('/static/core/fonts/JosefinSans-VariableFont_wght.ttf') format('truetype');
@@ -32,32 +32,27 @@ p, ol, ul, a, th, td, h1, h2, h3, h4, h5, h6 {
 /* Menu */
 
 .topnav {
+    position: sticky;
+    top: 0;
     height: 42px;
-    border: none;
-    margin: 0;
-    top: 0%;
-    padding: 0;
-    background-color: rgba(51, 61, 61, 0.959);
     width: 100%;
-    position: fixed;
-    /* position: -webkit-sticky; */
+    border: none;
+    background-color: rgba(51, 61, 61, 0.959);
     z-index: 1;
 }
 #navlogo {
-    float:left;
-    display: grid;
-    place-items: center;
     position: absolute;
     top: 20%;
     left: 2%;
+    display: grid;
+    place-items: center;
 }
 #navsocial {
-    float: right;
-    display: flex;
-    align-items: center;
     position: absolute;
     top: 25%;
     right: 2%;
+    display: flex;
+    align-items: center;
 }
 #navsocial a {
     margin-left: 10px;
@@ -107,12 +102,6 @@ p, ol, ul, a, th, td, h1, h2, h3, h4, h5, h6 {
     animation-play-state: paused;
 } */
 
-@media screen and (max-width: 4000px) {
-    .navmenu {
-        display: block;
-        display: inline;
-    }
-}
 @media screen and (max-width: 980px) {
     .navmenu {
         display: none;
@@ -129,7 +118,6 @@ p, ol, ul, a, th, td, h1, h2, h3, h4, h5, h6 {
 
 /* Pages */
 .pagetitle {
-    background-color: #000; 
     color: #fff;
     font-size: xx-large;
     font-weight: bold;
@@ -158,7 +146,6 @@ p, ol, ul, a, th, td, h1, h2, h3, h4, h5, h6 {
 /* Footer */
 
 footer {
-    background-color: #000;
     width: 100%;
     position: static;
     border-top: 1px solid silver;
