--- a/core/templates/core/blog.html
+++ b/core/templates/core/blog.html
@@ -1,9 +1,9 @@
-{% extends "core\core.html" %}
+{% extends "core\base.html" %}
 
 {% load static %}
 
 {% block title %}
-    <title>A-Z Logs | Leroy Buliro</title>
+    <title>A-Z Logs by Leroy Buliro</title>
 {% endblock title %}
 
 {% block style %}
@@ -11,7 +11,7 @@
 {% endblock style %}
 
 {% block navmenu %}
-    <!--a id="menuactive">HOME</a-->
+    <a href="{% url 'core:index' %}">HOME</a>
     <a id="menuactive">BLOG</a>
     <a href="{% url 'core:podcast' %}">PODCAST</a>
 {% endblock navmenu %}
@@ -21,8 +21,8 @@
 <div class="blogpage">
     
     <div id="pagetitle">
-        <p style="color: #fff; font-size: xx-large; font-weight: bold; text-align: center; line-height: 0rem;">A-Z LOGS</p>
-        <p style="color: rgb(141, 141, 141); font-size: medium; font-weight: lighter; text-align: center; line-height: 0rem; margin-top: 0px;">A Leroy Buliro Blog</p>
+        <p style="color: #fff; font-size: xx-large; font-weight: bold; text-align: center; line-height: 1rem;">A-Z LOGS</p>
+        <p style="color: rgb(141, 141, 141); font-size: medium; font-weight: lighter; text-align: center; line-height: 1rem; margin-top: 8px;">A Leroy Buliro Blog</p>
     </div>
     
     <div id="blogs">
