--- a/core/templates/core/terms.html
+++ b/core/templates/core/terms.html
@@ -22,12 +22,15 @@
 
 <style>
     * {
+        margin: 0;
+        padding: 0;
         box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        -webkit-box-sizing: border-box;
     }
 
     body {
         background-color: black;
-        width: 100%;
     }
 
     @font-face {
