--- a/core/templates/core/blog.html
+++ b/core/templates/core/blog.html
@@ -10,6 +10,10 @@
 <link rel="stylesheet" href="{% static 'core/blog.css' %}">
 {% endblock style %}
 
+{% block script %}
+<script src="{% static 'core/blog.js' %}"></script>
+{% endblock script %}
+
 {% block navmenu %}
     <a href="{% url 'core:index' %}">HOME</a>
     <a id="menuactive">BLOG</a>
@@ -28,7 +32,7 @@
     <div id="blogs">
         <!-- blog-post loop -->
         {% for article in articles %}
-        <section style="border: 1px solid #ccc; border-radius: 2%;">
+        <section class="articlediv" style="border: 1px solid #ccc; border-radius: 2%;">
             <a href="{% url 'core:blogpost' article.id %}">
                 <div style="margin: 3%; display: grid; grid-column: 1fr; grid-gap: 10px;">
                     <img  class="blogimage" src="{{ article.featureimage.url }}" alt="{{ article.title }}">
@@ -43,8 +47,11 @@
         </section>
         {% endfor %}
     </div>
-
     <!-- /. blog-post -->
+
+    <div style="display: flex; justify-content: center; margin: 10% 0% 8% 0%;">
+        <button id="loadnext" >SHOW MORE</button>
+    </div>
 
 </div><!-- /.blog section -->
     
