--- a/core/static/core/blog.css
+++ b/core/static/core/blog.css
@@ -24,11 +24,16 @@ a {
 #blogs a:hover {
     text-decoration: none;
 }
+.articlediv {
+    filter: grayscale();
+    transition: 400ms;
+}
+.articlediv:hover {
+    filter: none;
+}
 #blogs .blogimage {
     width: 100%;
     height: auto;
-    margin-left: 0;
-    padding-left: 0;
 }
 #blogs .blogmeta {
     margin: 2% 0% 0% 0%;
@@ -70,7 +75,7 @@ button {
     font-size: small;
     font-weight: bold;
     border-radius: 8px;
-    padding: 2% 4%;
+    padding: 1% 4%;
     display: none;
 }
 
@@ -82,6 +87,9 @@ button {
 }
 
 @media only screen and (max-width: 570px) {
+    .articlediv {
+        filter: none;
+    }
     #blogs {
         grid-template-columns: 1fr;
         grid-gap: 40px;
