--- a/core/templates/core/episode.html
+++ b/core/templates/core/episode.html
@@ -14,7 +14,7 @@
 {% endblock script %}
 
 {% block navmenu %}
-    <!--a id="menuactive">HOME</a-->
+    <a href="{% url 'core:index' %}">HOME</a>
     <a href="{% url 'core:blogpage' %}">BLOG</a>
     <a href="{% url 'core:podcast' %}">PODCAST</a>
 {% endblock navmenu %}
